<resources>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>
    <string name="no_email_clients_installed">No email clients installed.</string>
    <string name="feedback_text">Go to the Legal Help page to request content changes for legal reasons.\nYour System info will be sent to developer. See privacy policy and terms of service.</string>
    <string name="app_name">CKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text_empty_page">At this point you have no cards in this section.</string>
    <string name="text_big_add_new_card">add new card</string>
    <string name="title_of_cards">name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="place_a_barcode_on_camera_to_scan_it">Place a barcode on camera to scan it</string>
    <string name="sim_barcode">1234567891011</string>
    <string name="name">Name</string>
    <string name="create_card">Create card</string>
    <string name="delete">Delete</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="add_a_new">add a new</string>
    <string name="card_color">Card color</string>
    <string name="enter_name_of_card">Enter name of card…</string>
    <string name="enter_name_of_the_card">Enter name of the card…</string>
    <string name="search_your_cards">Search your cards</string>
    <string name="nfc">NFC</string>
    <string name="now_all_contactless_cards_in_your_mobile_phone">Now all contactless cards in your mobile phone</string>
    <string name="keep_your_tickets_on_the_same_device">Keep your tickets on the same device</string>
    <string name="tickets">Tickets</string>
    <string name="to_use_the_discount_cards_are_now_much_easier">To use the discount cards are now much easier</string>
    <string name="discount_cards">Discount cards</string>
    <string name="keep_your_credit_cards_for_quick_access">Keep your credit cards for quick access</string>
    <string name="credit_cards">Credit cards</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="abc">ABC</string>
    <string name="def">DEF</string>
    <string name="ghi">GHI</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqrs">PQRS</string>
    <string name="tuv">TUV</string>
    <string name="wxyz">WXYZ</string>
    <string name="location">Location</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="looks_like_iconnection">It looks like your internet connection is off. Please turn it on and try again.</string>
    <string name="btn_continue">continue</string>
    <string name="shared_input_password_first">To protect your credit cards please install the security PIN</string>
    <string name="confirm_your_pin">\nConfirm your PIN</string>
    <string name="version">Version: 1.0.0.0 (1)</string>
    <string name="night_mode">Night mode</string>
    <string name="share">Share</string>
    <string name="title_second_group">Communicate</string>
    <string name="attach_the_card_to_the_device_to_read">Attach the card to the device to read</string>
    <string name="scanned_the_code_right_here">Scanned code right here</string>
    <string name="say_what_no_results_for_test">Say what?! No results for \'test\'</string>
    <string name="no_result_for">Say what?! No result for</string>
    <string name="add_a_new_card">add a new card</string>
    <string name="save">SAVE</string>
    <string name="add_to_calendar">Add event to Calendar</string>
    <string name="title">Title</string>
    <string name="owner">Owner</string>
    <string name="john_michael_johnson">John Michael Johnson</string>
    <string name="_16_jan_2016">16 Jan 2016</string>
    <string name="_6_00_pm">6:00 PM</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="photo_editor">Photo editor</string>
    <string name="done">DONE</string>
    <string name="please_wait">Please wait...</string>
    <string name="name_of_the_bank">Name of the bank</string>
    <string name="number">Number</string>
    <string name="valid_thru">VALID THRU:</string>
    <string name="valid_n_thru">VALID\nTHRU</string>
    <string name="cardholder">Cardholder</string>
    <string name="_4000_1234_5678_9123">4000 1234 5678 9123</string>
    <string name="_4000">4000</string>
    <string name="_02_16">02/16</string>
    <string name="john_johnson">JOHN JOHNSON</string>
    <string name="pin">PIN</string>
    <string name="cardholder_">Cardholder:</string>
    <string name="number_">Number:</string>
    <string name="pin_">PIN:</string>
    <string name="empty_card_name">Card name can not be empty</string>
    <string name="error_starting_camera_preview">"Error starting camera preview: "</string>
    <string name="picture_wasnt_taken">Picture wasn\'t taken!</string>
    <string name="filed_to_create_directory">Failed to create directory</string>
    <string name="fill_all_fields">Please fill all fields and try again</string>
    <string name="connot_find_card">Cannot find card</string>
    <string name="application_need_access">Application need access to saved information</string>
    <string name="permission_has_not_been_granted">This permission is required for creating cards</string>
    <string name="cannot_load_image">Can not load image, please try again</string>
    <string name="cannot_load_image_to_crop">Can not load image to crop, please try again</string>
    <string name="picture_wasnt_edited">Picture wasn\'t edited</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="free">FREE</string>
    <string name="original">ORIGINAL</string>
    <string name="square">SQUARE</string>
    <string name="_9_16">9:16</string>
    <string name="_16_9">16:9</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="verification_number">Verification number</string>
    <string name="verification_nnumber">Verification\nnumber</string>
    <string name="close">CLOSE</string>
    <string name="apply">APPLY</string>
    <string name="fount_matches_on_fields">Found matches on fields\n</string>
    <string name="matches_found">Matches found</string>
    <string name="click_apply_if_matches">Click to apply if the credit card data matches</string>
    <string name="hold_nfc_item_to_your_phone">Please hold nfc item to your phone</string>
    <string name="enter_the_name_of_the_card">Enter the name of the card:</string>
    <string name="new_nfc_item">New NFC item</string>
    <string name="hold_your_phone_to_edc_or_pos_machine">Please hold your phone to edc or pos machine</string>
    <string name="bank_title">Credit cards</string>
    <string name="discount_title">Discount cards</string>
    <string name="tickets_title">Tickets</string>
    <string name="nfc_title">NFC items</string>
    <string name="new_discount_title">New discount card</string>
    <string name="new_bank_title">New credit card</string>
    <string name="new_ticket_title">New ticket</string>
    <string name="new_nfc_title">New NFC item</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="share_body">Donwload app on playmarket: ...</string>
    <string name="share_title">CKeeper</string>
    <string name="must_make_card_images">You must make the card images</string>
    <string name="cannot_insert_card_to_database">Cannot insert card to database</string>
    <string name="cannot_edit_card">Cannot edit card</string>
    <string name="cannot_convert_barcode">Cannot convert barcode</string>
    <string name="cannot_scanning_card">Cannot scanning card</string>
    <string name="go">GO</string>
    <string name="cannot_parese_location">Cannot parse location</string>
    <string name="country_">"Country: "</string>
    <string name="timezone_">"Timezone: "</string>
    <string name="query_">"Query: "</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="notification_update_first">A new version of the application is available (</string>
    <string name="notification_update_second">Please click OK to update</string>
    <string name="update">UPDATE</string>
    <string name="cannot_parse_settings">Cannot parse settings</string>
    <string name="crop">CROP</string>
    <string name="ckeeper_the_cards_keeper">CKeeper - the cards keeper</string>
    <string name="not_fount_matches">Not found matches</string>
    <string name="cannot_save_nfc_item">Cannot save NFC item</string>
    <string name="cannot_save_nfc_title_isempty">Cannot saved\nTitle of NFC is empty</string>
    <string name="cannot_scanning_type_nfc">Cannot scanning this type of NFC item</string>
    <string name="cannot_write_nfc_tag_to_db">Cannot write NFC tag to Database</string>
    <string name="cannot_connet_to_ndef">Cannot connect to NDEF</string>
    <string name="cannot_write_nfc">Cannot write NFC tag</string>
    <string name="ndef_not_available">NDEF not available</string>
    <string name="error_setting_camera_preview">Error setting camera preview</string>
    <string name="camera_not_available">Camera not available</string>
    <string name="filed_to_getInstance_androidKeyStore">Filed to getInstance AndroidKeyStore</string>
    <string name="filed_to_get_keygenerator_instance">Failed to get KeyGenerator instance</string>
    <string name="filed_to_get_cipher">Failed to get Cipher</string>
    <string name="filed_to_init_cipher">Failed to init Cipher</string>
    <string name="error_to_past_matches">Error to paste matches</string>
    <string name="beta">[BETA]</string>
    <string name="sign_in_with_your_google_account">Sign in with your Google Account</string>
    <string name="sign_in_to_your_google_account_and_get_access_to_cards_on_any_device">Sign In to your Google Account and get access to cards on any device.</string>
    <string name="owner_">Owner:</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="name_ticket">Name ticket</string>
    <string name="name_card">Name card</string>
    <string name="feedback">Feedback</string>
    <string name="communication">Communication</string>
    <string name="rate_app">Rate app</string>
    <string name="join_group">Join group</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="vk_com">VK.com</string>
</resources>