<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_main"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_message"/>

    <Button
        android:id="@+id/btn_write"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_message"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/message_write_tag"/>

    <Button
        android:id="@+id/btn_read"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_write"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/message_read_tag"/>
</RelativeLayout>
