<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/card_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginStart="16dp"
                                    android:layout_marginTop="16dp"
                                    android:foreground="?attr/selectableItemBackground"
                                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                    card_view:cardCornerRadius="2dp"
                                    card_view:cardElevation="2dp">

    <!--Material design card-->

    <FrameLayout
        android:id="@+id/linear_card"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@color/bluelight_500"
        android:gravity="center">

        <com.maxcriser.cards.view.TextViews.NotoSans
            android:id="@+id/title_main_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center|start"
            android:text="@string/title_of_cards"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical">

            <com.maxcriser.cards.view.TextViews.RobotoThin
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/_4000_1234_5678_9123"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-8dp"
                android:text="@string/_4000"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/valid_thru"
                    android:textColor="@android:color/black"
                    android:textSize="8sp"/>

                <com.maxcriser.cards.view.TextViews.RobotoThin
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/_02_16"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/john_johnson"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/icon_bank_cards"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:background="@drawable/type_visa"/>

        </LinearLayout>

    </FrameLayout>
</android.support.v7.widget.CardView>