<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/fragment_toolbar_main"/>

            <android.support.v7.widget.CardView
                android:id="@+id/main_credit_card"
                style="@style/MenuItemCardView"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:cardBackgroundColor="@color/card_view"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/credit_cards"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/keep_your_credit_cards_for_quick_access"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:textStyle="normal"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_discount_card"
                style="@style/MenuItemCardView"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:cardBackgroundColor="@color/card_view"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/discount_cards"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/to_use_the_discount_cards_are_now_much_easier"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:textStyle="normal"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_tickets_card"
                style="@style/MenuItemCardView"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:cardBackgroundColor="@color/card_view"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/tickets"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/keep_your_tickets_on_the_same_device"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:textStyle="normal"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/main_nfc_card"
                style="@style/MenuItemCardView"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:cardBackgroundColor="@color/card_view"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/nfc"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:text="@string/now_all_contactless_cards_in_your_mobile_phone"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:textStyle="normal"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>

</android.support.v4.widget.DrawerLayout>