<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/cameraContainer"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/frame_solution_of_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_shadow"
        android:visibility="gone">

        <com.maxcriser.cards.view.labels.RobotoThin
            android:id="@+id/solution_of_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/text_white"
            android:textSize="@dimen/barcode_scan_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.maxcriser.cards.view.labels.RobotoThin
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/text_white"/>

            <com.maxcriser.cards.view.labels.RobotoThin
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/text_white"/>

        </LinearLayout>

    </FrameLayout>

    <com.maxcriser.cards.view.labels.RobotoThin
        android:id="@+id/bottom_text_barcode_scan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/gray_shadow"
        android:gravity="center"
        android:text="@string/place_a_barcode_on_camera_to_scan_it"
        android:textAllCaps="true"
        android:textColor="@color/text_white"/>

</FrameLayout>